Add html structure for form and cards

--- a/index.html
+++ b/index.html
@@ -5,5 +5,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Library</title>
   </head>
-  <body></body>
+  <body>
+    <h1>My Library</h1>
+
+    <form action="" id="form">
+      <input type="text" id="title" />
+      <input type="text" id="auther" />
+      <input type="text" id="pages" />
+      <input type="text" id="read" />
+      <input type="submit"
+    </form>
+
+    <div class="library-grid">
+      <div class="test-book-card">
+        <h3 id="test-title">Title</h3>
+        <p id="test-auther">Auther</p>
+        <p id="test-pages">Pages</p>
+        <p id="test-read">Read</p>
+      </div>
+    </div>
+  </body>
 </html>
