Close input tag to fix form

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <input type="text" id="auther" />
       <input type="text" id="pages" />
       <input type="text" id="read" />
-      <input type="submit"
+      <input type="submit" />
     </form>
 
     <div class="library-grid">
