Fix spelling of author

--- a/index.html
+++ b/index.html
@@ -10,19 +10,20 @@
 
     <form action="" id="form">
       <input type="text" id="title" />
-      <input type="text" id="auther" />
+      <input type="text" id="author" />
       <input type="text" id="pages" />
       <input type="text" id="read" />
-      <input type="submit" />
+      <input type="submit" id="submitBookButton" />
     </form>
 
     <div class="library-grid">
       <div class="test-book-card">
         <h3 id="test-title">Title</h3>
-        <p id="test-auther">Auther</p>
+        <p id="test-author">Author</p>
         <p id="test-pages">Pages</p>
         <p id="test-read">Read</p>
       </div>
     </div>
+    <script src="script.js" defer></script>
   </body>
 </html>
