Change read input to checkbox and label

--- a/index.html
+++ b/index.html
@@ -12,7 +12,10 @@
       <input type="text" id="title" />
       <input type="text" id="author" />
       <input type="text" id="pages" />
-      <input type="text" id="read" />
+      <label>
+        <input type="checkbox" id="read" />
+        Read?
+      </label>
       <input type="submit" id="submitBookButton" />
     </form>
 
