Modify class name for libraryGrid div

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <input type="submit" id="submitBookButton" />
     </form>
 
-    <div class="library-grid">
+    <div class="libraryGrid">
       <div class="test-book-card">
         <h3 id="test-title">Title</h3>
         <p id="test-author">Author</p>
