--- a/index.html
+++ b/index.html
@@ -12,13 +12,14 @@
 
     <dialog id="add-book-modal" open>
       <form action="" id="form">
-        <input type="text" id="title" />
-        <input type="text" id="author" />
-        <input type="text" id="pages" />
-        <label>
-          <input type="checkbox" id="read" />
-          Read?
-        </label>
+        <label for="title">Title</label>
+        <input type="text" id="title" name="title" />
+        <label for="author">Author</label>
+        <input type="text" id="author" name="author" />
+        <label for="pages">Pages</label>
+        <input type="text" id="pages" name="pages" />
+        <label for="read">Read?</label>
+        <input type="checkbox" id="read" name="read" />
         <input type="submit" id="submit-book" />
       </form>
     </dialog>
