--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
     <button id="add-book">Add Book</button>
 
-    <dialog id="add-book-modal" open>
+    <dialog id="add-book-modal">
       <form action="" id="form">
         <label for="title">Title</label>
         <input type="text" id="title" name="title" />
