--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <button id="add-book">Add Book</button>
 
     <dialog id="add-book-modal">
-      <form action="" id="form">
+      <form action="" id="form" method="dialog">
         <label for="title">Title</label>
         <input type="text" id="title" name="title" />
         <label for="author">Author</label>
