Add close button to modal

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
         <label for="read">Read?</label>
         <input type="checkbox" id="read" name="read" />
         <input type="submit" id="submit-book" />
+        <button formmethod="dialog">Close</button>
       </form>
     </dialog>
 
