--- a/index.html
+++ b/index.html
@@ -12,12 +12,18 @@
 
     <dialog id="add-book-modal">
       <form action="" id="form" method="dialog">
-        <label for="title">Title</label>
+        <label for="title">Title*</label>
         <input type="text" id="title" name="title" />
-        <label for="author">Author</label>
+        <span class="validation" id="title-validation"
+          >* Title is required</span
+        >
+        <label for="author">Author*</label>
         <input type="text" id="author" name="author" />
+        <span class="validation" id="author-validation"
+          >* Author is required</span
+        >
         <label for="pages">Pages</label>
-        <input type="text" id="pages" name="pages" />
+        <input type="number" id="pages" name="pages" />
         <label for="read">Read?</label>
         <input type="checkbox" id="read" name="read" />
         <input type="submit" id="submit-book" />
@@ -31,6 +37,7 @@
         <p id="test-author">Author</p>
         <p id="test-pages">Pages</p>
         <p id="test-read">Read</p>
+        <button>Remove</button>
       </div>
     </div>
     <script src="script.js" defer></script>
