--- a/index.html
+++ b/index.html
@@ -14,12 +14,12 @@
       <form action="" id="form" method="dialog">
         <label for="title">Title*</label>
         <input type="text" id="title" name="title" />
-        <span class="validation" id="title-validation"
+        <span class="validation" id="title-validation" style="display: none"
           >* Title is required</span
         >
         <label for="author">Author*</label>
         <input type="text" id="author" name="author" />
-        <span class="validation" id="author-validation"
+        <span class="validation" id="author-validation" style="display: none"
           >* Author is required</span
         >
         <label for="pages">Pages</label>
