Wrap html elements for page layout

--- a/index.html
+++ b/index.html
@@ -7,38 +7,44 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <h1>My Library</h1>
+    <div class="page-grid">
+      <dialog id="add-book-modal">
+        <form action="" id="form" method="dialog">
+          <label for="title">Title*</label>
+          <input type="text" id="title" name="title" />
+          <span class="validation" id="title-validation" style="display: none"
+            >* Title is required</span
+          >
+          <label for="author">Author*</label>
+          <input type="text" id="author" name="author" />
+          <span class="validation" id="author-validation" style="display: none"
+            >* Author is required</span
+          >
+          <label for="pages">Pages</label>
+          <input type="number" id="pages" name="pages" />
+          <label for="read">Read?</label>
+          <input type="checkbox" id="read" name="read" />
+          <input type="submit" id="submit-book" />
+          <button formmethod="dialog">Close</button>
+        </form>
+      </dialog>
 
-    <button id="add-book">Add Book</button>
+      <div class="sidebar">
+        <button id="add-book">Add Book</button>
+      </div>
 
-    <dialog id="add-book-modal">
-      <form action="" id="form" method="dialog">
-        <label for="title">Title*</label>
-        <input type="text" id="title" name="title" />
-        <span class="validation" id="title-validation" style="display: none"
-          >* Title is required</span
-        >
-        <label for="author">Author*</label>
-        <input type="text" id="author" name="author" />
-        <span class="validation" id="author-validation" style="display: none"
-          >* Author is required</span
-        >
-        <label for="pages">Pages</label>
-        <input type="number" id="pages" name="pages" />
-        <label for="read">Read?</label>
-        <input type="checkbox" id="read" name="read" />
-        <input type="submit" id="submit-book" />
-        <button formmethod="dialog">Close</button>
-      </form>
-    </dialog>
+      <div class="main-content">
+        <h1>My Library</h1>
 
-    <div class="library-grid">
-      <div class="test-book-card">
-        <h3 id="test-title">Title</h3>
-        <p id="test-author">Author</p>
-        <p id="test-pages">Pages</p>
-        <p id="test-read">Read</p>
-        <button>Remove</button>
+        <div class="library-grid">
+          <div class="test-book-card">
+            <h3 id="test-title">Title</h3>
+            <p id="test-author">Author</p>
+            <p id="test-pages">Pages</p>
+            <p id="test-read">Read</p>
+            <button>Remove</button>
+          </div>
+        </div>
       </div>
     </div>
     <script src="script.js" defer></script>
