Remove test html card

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Library</title>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
     <div class="page-grid">
@@ -36,15 +36,7 @@
       <div class="main-content">
         <h1>My Library</h1>
 
-        <div class="library-grid">
-          <div class="test-book-card">
-            <h3 id="test-title">Title</h3>
-            <p id="test-author">Author</p>
-            <p id="test-pages">Pages</p>
-            <p id="test-read">Read</p>
-            <button>Remove</button>
-          </div>
-        </div>
+        <div class="library-grid"></div>
       </div>
     </div>
     <script src="script.js" defer></script>
