--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Library</title>
+    <title>No Shelf Control</title>
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
@@ -30,11 +30,11 @@
       </dialog>
 
       <div class="sidebar">
-        <button id="add-book">Add Book</button>
+        <button id="add-book">+Add Book</button>
       </div>
 
       <div class="main-content">
-        <h1>My Library</h1>
+        <h1>No Shelf Control</h1>
 
         <div class="library-grid"></div>
       </div>
