Add hover affect for buttons

--- a/index.html
+++ b/index.html
@@ -31,10 +31,11 @@
 
       <div class="sidebar">
         <button id="add-book">+Add Book</button>
+        <div class="library-stats"></div>
       </div>
 
       <div class="main-content">
-        <h1>No Shelf Control</h1>
+        <h1 class="pacifico-regular">No Shelf Control</h1>
 
         <div class="library-grid"></div>
       </div>
