--- a/index.html
+++ b/index.html
@@ -10,16 +10,21 @@
     <div class="page-grid">
       <dialog id="add-book-modal">
         <form action="" id="form" method="dialog">
-          <label for="title">Title*</label>
-          <input type="text" id="title" name="title" />
-          <span class="validation" id="title-validation" style="display: none"
-            >* Title is required</span
-          >
-          <label for="author">Author*</label>
-          <input type="text" id="author" name="author" />
-          <span class="validation" id="author-validation" style="display: none"
-            >* Author is required</span
-          >
+          <div class="title-author">
+            <label for="title">Title*</label>
+            <input type="text" id="title" name="title" />
+            <span class="validation" id="title-validation" style="display: none"
+              >* Title is required</span
+            >
+            <label for="author">Author*</label>
+            <input type="text" id="author" name="author" />
+            <span
+              class="validation"
+              id="author-validation"
+              style="display: none"
+              >* Author is required</span
+            >
+          </div>
           <label for="pages">Pages</label>
           <input type="number" id="pages" name="pages" />
           <label for="read">Read?</label>
@@ -31,7 +36,6 @@
 
       <div class="sidebar">
         <button id="add-book">+Add Book</button>
-        <div class="library-stats"></div>
       </div>
 
       <div class="main-content">
