--- a/index.html
+++ b/index.html
@@ -25,10 +25,12 @@
               >* Author is required</span
             >
           </div>
-          <label for="pages">Pages</label>
-          <input type="number" id="pages" name="pages" />
-          <label for="read">Read?</label>
-          <input type="checkbox" id="read" name="read" />
+          <div class="pages-read">
+            <label for="pages">Pages</label>
+            <input type="number" id="pages" name="pages" />
+            <label for="read">Read?</label>
+            <input type="checkbox" id="read" name="read" />
+          </div>
           <input type="submit" id="submit-book" />
           <button formmethod="dialog">Close</button>
         </form>
